[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "straln"
version = "0.1"
description = "A CLI tool for EMBOSS stretcher alignments parsing and VCF analysis"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "nikolienka24" }
]

dependencies = [
    "PyVCF3",
    "pandas",
    "python-Levenshtein",
]

[project.scripts]
straln = "stretcher_parser.__main__:main"

[tool.setuptools]
packages = ["stretcher_parser", "analysis"]